--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-flask
 fpdf
 blinker==1.9.0
 click==8.1.7
@@ -21,9 +20,9 @@ PyGetWindow==0.0.9
 pymongo==4.10.1
 PyMsgBox==1.0.9
 pyngrok==7.2.3
-pyobjc-core==10.3.2
-pyobjc-framework-Cocoa==10.3.2
-pyobjc-framework-Quartz==10.3.2
+pyobjc-core==10.3.2; sys_platform == "darwin"
+pyobjc-framework-Cocoa==10.3.2; sys_platform == "darwin"
+pyobjc-framework-Quartz==10.3.2; sys_platform == "darwin"
 pyperclip==1.9.0
 PyRect==0.2.0
 PyScreeze==1.0.1
@@ -42,4 +41,6 @@ tqdm==4.67.1
 tzdata==2024.2
 Werkzeug==3.1.3
 colorama
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.1/libexec/wheel-0.45.1-py3-none-any.whl#sha256=da46333d5dcbde6e20cf7e2f8fff9e9ce76e8c94dc4afd6fb95fc4bc2745fb5e
+
+if __name__ == "__main__":
+    app.run(host="0.0.0.0", port=5000)
